# rustos

./: .gitignore  Cargo.toml  Makefile  Xargo.toml
src/: lib.rs  print.rs  vga_buffer.rs
src/arch/x86_64/: boot.asm  linker.ld  long_mode_start.asm
src/interrupts/: apic.rs  gdt.rs  mod.rs
src/io/: mod.rs  port.rs  serial.rs
src/io/term/: ansi.rs  mod.rs
src/io/vga/: text_buffer.rs
src/memory/: area_frame_allocator.rs  mod.rs  stack_allocator.rs
src/memory/heap_allocator/: mod.rs
src/memory/heap_allocator/linked_list_allocator/: hole.rs  mod.rs
src/memory/paging/: entry.rs  mapper.rs  mod.rs  table.rs  temporary_page.rs
src/vga/: mod.rs  text_buffer.rs
