[package]
name = "rustos"
version = "0.1.0"
authors = ["Nick von Bulow <nick@nvonbulow.com>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
bitflags = "1.0.1"
bitfield = "0.12.1"
bit_field = "0.9.0"
multiboot2 = "0.3.2"
once = "0.3.3"
raw-cpuid = "3.0.0"
rlibc = "1.0"
spin = "0.4.6"
volatile = "0.2.3"
x86_64 = "0.1.2"

[dependencies.lazy_static]
version = "1.0.0"
features = ["spin_no_std"]

[profile.release]
debug = 2
